# MNAI-2

./: botty.html  chat.py  pyproject.toml  requirements.txt
app/: chat.py
app/static/: botty.html
