[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.0.2"
requests = "2.26.0"
beautifulsoup4 = "4.10.0"
transformers = "4.14.0"
numpy = "1.26.4"  # Add this line

[build-system]
requires = ["setuptools", "wheel"]
